--- a/src/App.css
+++ b/src/App.css
@@ -1908,6 +1908,10 @@ input:checked + .toggle-bg{
   border-left-color: rgb(63 131 248 / var(--tw-border-opacity));
 }
 
+.border-l-transparent{
+  border-left-color: transparent;
+}
+
 .bg-blue-700{
   --tw-bg-opacity: 1;
   background-color: rgb(26 86 219 / var(--tw-bg-opacity));
@@ -2934,9 +2938,32 @@ input:checked + .toggle-bg{
   cursor: not-allowed;
 }
 
+.hover\:border-l-2:hover{
+  border-left-width: 2px;
+}
+
+.hover\:border-l:hover{
+  border-left-width: 1px;
+}
+
 .hover\:border-gray-300:hover{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.hover\:border-l-blue-200:hover{
+  --tw-border-opacity: 1;
+  border-left-color: rgb(195 221 253 / var(--tw-border-opacity));
+}
+
+.hover\:border-l-blue-700:hover{
+  --tw-border-opacity: 1;
+  border-left-color: rgb(26 86 219 / var(--tw-border-opacity));
+}
+
+.hover\:border-l-blue-500:hover{
+  --tw-border-opacity: 1;
+  border-left-color: rgb(63 131 248 / var(--tw-border-opacity));
 }
 
 .hover\:bg-gray-100:hover{
