--- a/src/App.css
+++ b/src/App.css
@@ -1138,16 +1138,25 @@ input:checked + .toggle-bg{
   margin-right: auto;
 }
 
+.my-5{
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+}
+
+.mb-5{
+  margin-bottom: 1.25rem;
+}
+
+.mr-2{
+  margin-right: 0.5rem;
+}
+
 .mb-10{
   margin-bottom: 2.5rem;
 }
 
 .ml-2{
   margin-left: 0.5rem;
-}
-
-.mr-2{
-  margin-right: 0.5rem;
 }
 
 .ml-5{
@@ -1184,10 +1193,6 @@ input:checked + .toggle-bg{
 
 .mt-4{
   margin-top: 1rem;
-}
-
-.mb-5{
-  margin-bottom: 1.25rem;
 }
 
 .mb-4{
@@ -1254,8 +1259,20 @@ input:checked + .toggle-bg{
   display: table;
 }
 
+.grid{
+  display: grid;
+}
+
 .hidden{
   display: none;
+}
+
+.h-screen{
+  height: 100vh;
+}
+
+.h-auto{
+  height: auto;
 }
 
 .h-6{
@@ -1325,10 +1342,6 @@ input:checked + .toggle-bg{
   height: 0.5rem;
 }
 
-.h-auto{
-  height: auto;
-}
-
 .h-px{
   height: 1px;
 }
@@ -1353,8 +1366,40 @@ input:checked + .toggle-bg{
   height: 0px;
 }
 
+.h-80{
+  height: 20rem;
+}
+
+.h-64{
+  height: 16rem;
+}
+
+.h-52{
+  height: 13rem;
+}
+
+.max-h-80{
+  max-height: 20rem;
+}
+
+.max-h-96{
+  max-height: 24rem;
+}
+
+.max-h-100{
+  max-height: 30rem;
+}
+
+.max-h-256{
+  max-height: 50rem;
+}
+
 .w-screen{
   width: 100vw;
+}
+
+.w-auto{
+  width: auto;
 }
 
 .w-60{
@@ -1435,12 +1480,24 @@ input:checked + .toggle-bg{
   width: 0.5rem;
 }
 
-.w-auto{
-  width: auto;
-}
-
 .w-11{
   width: 2.75rem;
+}
+
+.w-9{
+  width: 2.25rem;
+}
+
+.w-96{
+  width: 24rem;
+}
+
+.w-4\/5{
+  width: 80%;
+}
+
+.w-80{
+  width: 20rem;
 }
 
 .max-w-sm{
@@ -1588,6 +1645,14 @@ input:checked + .toggle-bg{
   list-style-type: none;
 }
 
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
 }
@@ -1634,6 +1699,10 @@ input:checked + .toggle-bg{
 
 .gap-4{
   gap: 1rem;
+}
+
+.gap-5{
+  gap: 1.25rem;
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]){
@@ -1697,6 +1766,10 @@ input:checked + .toggle-bg{
 
 .self-center{
   align-self: center;
+}
+
+.overflow-auto{
+  overflow: auto;
 }
 
 .overflow-hidden{
@@ -1803,6 +1876,10 @@ input:checked + .toggle-bg{
   border-width: 2px;
 }
 
+.border-0{
+  border-width: 0px;
+}
+
 .border-l-2{
   border-left-width: 2px;
 }
@@ -1837,6 +1914,10 @@ input:checked + .toggle-bg{
 
 .border-l{
   border-left-width: 1px;
+}
+
+.border-l-4{
+  border-left-width: 4px;
 }
 
 .border-gray-200{
@@ -1910,6 +1991,15 @@ input:checked + .toggle-bg{
 
 .border-l-transparent{
   border-left-color: transparent;
+}
+
+.border-l-blue-800{
+  --tw-border-opacity: 1;
+  border-left-color: rgb(30 66 159 / var(--tw-border-opacity));
+}
+
+.bg-transparent{
+  background-color: transparent;
 }
 
 .bg-blue-700{
@@ -2025,10 +2115,6 @@ input:checked + .toggle-bg{
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
-.bg-transparent{
-  background-color: transparent;
-}
-
 .bg-gray-200{
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -2101,6 +2187,16 @@ input:checked + .toggle-bg{
 .bg-purple-600{
   --tw-bg-opacity: 1;
   background-color: rgb(126 58 242 / var(--tw-bg-opacity));
+}
+
+.bg-blue-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(118 169 250 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 131 248 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50{
@@ -2374,6 +2470,11 @@ input:checked + .toggle-bg{
   padding: 0px !important;
 }
 
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2387,11 +2488,6 @@ input:checked + .toggle-bg{
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
 }
 
 .py-16{
@@ -2454,6 +2550,16 @@ input:checked + .toggle-bg{
   padding-bottom: 1rem;
 }
 
+.px-7{
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .pl-0{
   padding-left: 0px;
 }
@@ -2490,6 +2596,10 @@ input:checked + .toggle-bg{
   padding-right: 1rem;
 }
 
+.pt-20{
+  padding-top: 5rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -2500,6 +2610,11 @@ input:checked + .toggle-bg{
 
 .font-Poppins{
   font-family: 'Poppins', sans-serif;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-xl{
@@ -2527,11 +2642,6 @@ input:checked + .toggle-bg{
   line-height: 2rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .font-bold{
   font-weight: 700;
 }
@@ -2546,6 +2656,10 @@ input:checked + .toggle-bg{
 
 .font-normal{
   font-weight: 400;
+}
+
+.font-light{
+  font-weight: 300;
 }
 
 .uppercase{
@@ -2938,27 +3052,9 @@ input:checked + .toggle-bg{
   cursor: not-allowed;
 }
 
-.hover\:border-l-2:hover{
-  border-left-width: 2px;
-}
-
-.hover\:border-l:hover{
-  border-left-width: 1px;
-}
-
 .hover\:border-gray-300:hover{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.hover\:border-l-blue-200:hover{
-  --tw-border-opacity: 1;
-  border-left-color: rgb(195 221 253 / var(--tw-border-opacity));
-}
-
-.hover\:border-l-blue-700:hover{
-  --tw-border-opacity: 1;
-  border-left-color: rgb(26 86 219 / var(--tw-border-opacity));
 }
 
 .hover\:border-l-blue-500:hover{
@@ -4195,6 +4291,10 @@ input:checked + .toggle-bg{
     height: 100%;
   }
 
+  .md\:h-52{
+    height: 13rem;
+  }
+
   .md\:w-48{
     width: 12rem;
   }
@@ -4205,6 +4305,10 @@ input:checked + .toggle-bg{
 
   .md\:max-w-xl{
     max-width: 36rem;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row{
@@ -4280,5 +4384,19 @@ input:checked + .toggle-bg{
   .dark .md\:dark\:hover\:text-white:hover{
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:h-52{
+    height: 13rem;
+  }
+
+  .lg\:h-4{
+    height: 1rem;
+  }
+
+  .lg\:h-44{
+    height: 11rem;
   }
 }  
