--- a/src/App.css
+++ b/src/App.css
@@ -1138,11 +1138,6 @@ input:checked + .toggle-bg{
   margin-right: auto;
 }
 
-.my-5{
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
-}
-
 .mb-5{
   margin-bottom: 1.25rem;
 }
@@ -1366,32 +1361,8 @@ input:checked + .toggle-bg{
   height: 0px;
 }
 
-.h-80{
-  height: 20rem;
-}
-
-.h-64{
-  height: 16rem;
-}
-
-.h-52{
-  height: 13rem;
-}
-
-.max-h-80{
-  max-height: 20rem;
-}
-
-.max-h-96{
-  max-height: 24rem;
-}
-
-.max-h-100{
-  max-height: 30rem;
-}
-
-.max-h-256{
-  max-height: 50rem;
+.h-14{
+  height: 3.5rem;
 }
 
 .w-screen{
@@ -1484,20 +1455,12 @@ input:checked + .toggle-bg{
   width: 2.75rem;
 }
 
-.w-9{
-  width: 2.25rem;
+.w-14{
+  width: 3.5rem;
 }
 
-.w-96{
-  width: 24rem;
-}
-
-.w-4\/5{
-  width: 80%;
-}
-
-.w-80{
-  width: 20rem;
+.max-w-6xl{
+  max-width: 72rem;
 }
 
 .max-w-sm{
@@ -1530,10 +1493,6 @@ input:checked + .toggle-bg{
 
 .max-w-5xl{
   max-width: 64rem;
-}
-
-.max-w-6xl{
-  max-width: 72rem;
 }
 
 .max-w-7xl{
@@ -1628,6 +1587,12 @@ input:checked + .toggle-bg{
   cursor: pointer;
 }
 
+.select-none{
+  -webkit-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
 .snap-x{
   -ms-scroll-snap-type: x var(--tw-scroll-snap-strictness);
       scroll-snap-type: x var(--tw-scroll-snap-strictness);
@@ -1643,10 +1608,6 @@ input:checked + .toggle-bg{
 
 .list-none{
   list-style-type: none;
-}
-
-.grid-cols-2{
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-cols-1{
@@ -1689,6 +1650,10 @@ input:checked + .toggle-bg{
   justify-content: space-between;
 }
 
+.gap-5{
+  gap: 1.25rem;
+}
+
 .gap-2{
   gap: 0.5rem;
 }
@@ -1699,10 +1664,6 @@ input:checked + .toggle-bg{
 
 .gap-4{
   gap: 1rem;
-}
-
-.gap-5{
-  gap: 1.25rem;
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]){
@@ -1868,6 +1829,10 @@ input:checked + .toggle-bg{
   border-bottom-left-radius: 0.375rem;
 }
 
+.border-0{
+  border-width: 0px;
+}
+
 .border{
   border-width: 1px;
 }
@@ -1876,8 +1841,8 @@ input:checked + .toggle-bg{
   border-width: 2px;
 }
 
-.border-0{
-  border-width: 0px;
+.border-l-4{
+  border-left-width: 4px;
 }
 
 .border-l-2{
@@ -1916,8 +1881,8 @@ input:checked + .toggle-bg{
   border-left-width: 1px;
 }
 
-.border-l-4{
-  border-left-width: 4px;
+.border-dashed{
+  border-style: dashed;
 }
 
 .border-gray-200{
@@ -1984,6 +1949,16 @@ input:checked + .toggle-bg{
   border-color: rgb(28 100 242 / var(--tw-border-opacity));
 }
 
+.border-gray-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+.border-l-blue-800{
+  --tw-border-opacity: 1;
+  border-left-color: rgb(30 66 159 / var(--tw-border-opacity));
+}
+
 .border-l-blue-500{
   --tw-border-opacity: 1;
   border-left-color: rgb(63 131 248 / var(--tw-border-opacity));
@@ -1993,13 +1968,13 @@ input:checked + .toggle-bg{
   border-left-color: transparent;
 }
 
-.border-l-blue-800{
-  --tw-border-opacity: 1;
-  border-left-color: rgb(30 66 159 / var(--tw-border-opacity));
-}
-
 .bg-transparent{
   background-color: transparent;
+}
+
+.bg-blue-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 131 248 / var(--tw-bg-opacity));
 }
 
 .bg-blue-700{
@@ -2189,14 +2164,9 @@ input:checked + .toggle-bg{
   background-color: rgb(126 58 242 / var(--tw-bg-opacity));
 }
 
-.bg-blue-400{
+.bg-indigo-700{
   --tw-bg-opacity: 1;
-  background-color: rgb(118 169 250 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(63 131 248 / var(--tw-bg-opacity));
+  background-color: rgb(81 69 205 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50{
@@ -2470,9 +2440,9 @@ input:checked + .toggle-bg{
   padding: 0px !important;
 }
 
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.px-10{
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .py-2{
@@ -2480,9 +2450,19 @@ input:checked + .toggle-bg{
   padding-bottom: 0.5rem;
 }
 
-.px-10{
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4{
@@ -2500,11 +2480,6 @@ input:checked + .toggle-bg{
   padding-right: 0.5rem;
 }
 
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .py-0\.5{
   padding-top: 0.125rem;
   padding-bottom: 0.125rem;
@@ -2518,11 +2493,6 @@ input:checked + .toggle-bg{
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
 }
 
 .py-1\.5{
@@ -2550,14 +2520,13 @@ input:checked + .toggle-bg{
   padding-bottom: 1rem;
 }
 
-.px-7{
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
+.pt-20{
+  padding-top: 5rem;
 }
 
 .pl-0{
@@ -2596,8 +2565,24 @@ input:checked + .toggle-bg{
   padding-right: 1rem;
 }
 
-.pt-20{
-  padding-top: 5rem;
+.pt-12{
+  padding-top: 3rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
+}
+
+.pt-2{
+  padding-top: 0.5rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .text-left{
@@ -2622,14 +2607,14 @@ input:checked + .toggle-bg{
   line-height: 1.75rem;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-base{
@@ -2640,6 +2625,10 @@ input:checked + .toggle-bg{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.font-light{
+  font-weight: 300;
 }
 
 .font-bold{
@@ -2658,10 +2647,6 @@ input:checked + .toggle-bg{
   font-weight: 400;
 }
 
-.font-light{
-  font-weight: 300;
-}
-
 .uppercase{
   text-transform: uppercase;
 }
@@ -2672,6 +2657,18 @@ input:checked + .toggle-bg{
 
 .leading-none{
   line-height: 1;
+}
+
+.leading-3{
+  line-height: .75rem;
+}
+
+.leading-5{
+  line-height: 1.25rem;
+}
+
+.leading-4{
+  line-height: 1rem;
 }
 
 .text-white{
@@ -2824,6 +2821,11 @@ input:checked + .toggle-bg{
   color: rgb(225 239 254 / var(--tw-text-opacity));
 }
 
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -2888,6 +2890,12 @@ input:checked + .toggle-bg{
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -4227,6 +4235,10 @@ input:checked + .toggle-bg{
     width: 1.5rem;
   }
 
+  .sm\:w-4\/5{
+    width: 80%;
+  }
+
   .sm\:rounded-lg{
     border-radius: 0.5rem;
   }
@@ -4291,10 +4303,6 @@ input:checked + .toggle-bg{
     height: 100%;
   }
 
-  .md\:h-52{
-    height: 13rem;
-  }
-
   .md\:w-48{
     width: 12rem;
   }
@@ -4354,6 +4362,24 @@ input:checked + .toggle-bg{
     padding: 0px;
   }
 
+  .md\:p-16{
+    padding: 4rem;
+  }
+
+  .md\:py-8{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .md\:px-16{
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
+
+  .md\:pb-12{
+    padding-bottom: 3rem;
+  }
+
   .md\:text-sm{
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -4388,15 +4414,23 @@ input:checked + .toggle-bg{
 }
 
 @media (min-width: 1024px){
-  .lg\:h-52{
-    height: 13rem;
-  }
-
-  .lg\:h-4{
-    height: 1rem;
-  }
-
   .lg\:h-44{
     height: 11rem;
+  }
+
+  .lg\:w-3\/5{
+    width: 60%;
+  }
+}
+
+@media (min-width: 1280px){
+  .xl\:w-1\/2{
+    width: 50%;
+  }
+}
+
+@media (min-width: 1806px){
+  .\32xl\:w-1\/3{
+    width: 33.333333%;
   }
 }  
