--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 /*
-! tailwindcss v3.1.3 | MIT License | https://tailwindcss.com
+! tailwindcss v3.1.4 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -359,13 +359,6 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   /* 2 */
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-  opacity: 1;
-  /* 1 */
-  color: #9CA3AF;
-  /* 2 */
-}
-
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
@@ -455,11 +448,6 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder{
   opacity: 1;
 }
 
-input:-ms-input-placeholder, textarea:-ms-input-placeholder{
-  color: #6B7280;
-  opacity: 1;
-}
-
 input::placeholder,textarea::placeholder{
   color: #6B7280;
   opacity: 1;
@@ -503,7 +491,6 @@ select{
   vertical-align: middle;
   background-origin: border-box;
   -webkit-user-select: none;
-      -ms-user-select: none;
           user-select: none;
   flex-shrink: 0;
   height: 1rem;
@@ -1146,6 +1133,10 @@ input:checked + .toggle-bg{
   margin-right: 0.5rem;
 }
 
+.ml-3{
+  margin-left: 0.75rem;
+}
+
 .mb-10{
   margin-bottom: 2.5rem;
 }
@@ -1176,10 +1167,6 @@ input:checked + .toggle-bg{
 
 .ml-0{
   margin-left: 0px;
-}
-
-.ml-3{
-  margin-left: 0.75rem;
 }
 
 .mt-6{
@@ -1226,6 +1213,10 @@ input:checked + .toggle-bg{
   margin-bottom: 1.5rem;
 }
 
+.mb-0{
+  margin-bottom: 0px;
+}
+
 .mt-1\.5{
   margin-top: 0.375rem;
 }
@@ -1270,6 +1261,18 @@ input:checked + .toggle-bg{
   height: auto;
 }
 
+.h-full{
+  height: 100%;
+}
+
+.h-14{
+  height: 3.5rem;
+}
+
+.h-20{
+  height: 5rem;
+}
+
 .h-6{
   height: 1.5rem;
 }
@@ -1284,10 +1287,6 @@ input:checked + .toggle-bg{
 
 .h-10{
   height: 2.5rem;
-}
-
-.h-20{
-  height: 5rem;
 }
 
 .h-36{
@@ -1315,10 +1314,6 @@ input:checked + .toggle-bg{
 .h-min{
   height: -webkit-min-content;
   height: min-content;
-}
-
-.h-full{
-  height: 100%;
 }
 
 .h-96{
@@ -1361,16 +1356,20 @@ input:checked + .toggle-bg{
   height: 0px;
 }
 
-.h-14{
-  height: 3.5rem;
-}
-
 .w-screen{
   width: 100vw;
 }
 
 .w-auto{
   width: auto;
+}
+
+.w-full{
+  width: 100%;
+}
+
+.w-14{
+  width: 3.5rem;
 }
 
 .w-60{
@@ -1383,10 +1382,6 @@ input:checked + .toggle-bg{
 
 .w-6{
   width: 1.5rem;
-}
-
-.w-full{
-  width: 100%;
 }
 
 .w-8{
@@ -1455,12 +1450,12 @@ input:checked + .toggle-bg{
   width: 2.75rem;
 }
 
-.w-14{
-  width: 3.5rem;
-}
-
 .max-w-6xl{
   max-width: 72rem;
+}
+
+.max-w-7xl{
+  max-width: 80rem;
 }
 
 .max-w-sm{
@@ -1493,10 +1488,6 @@ input:checked + .toggle-bg{
 
 .max-w-5xl{
   max-width: 64rem;
-}
-
-.max-w-7xl{
-  max-width: 80rem;
 }
 
 .max-w-xs{
@@ -1575,6 +1566,10 @@ input:checked + .toggle-bg{
           animation: spin 1s linear infinite;
 }
 
+.cursor-pointer{
+  cursor: pointer;
+}
+
 .cursor-not-allowed{
   cursor: not-allowed;
 }
@@ -1583,19 +1578,13 @@ input:checked + .toggle-bg{
   cursor: grab;
 }
 
-.cursor-pointer{
-  cursor: pointer;
-}
-
 .select-none{
   -webkit-user-select: none;
-      -ms-user-select: none;
           user-select: none;
 }
 
 .snap-x{
-  -ms-scroll-snap-type: x var(--tw-scroll-snap-strictness);
-      scroll-snap-type: x var(--tw-scroll-snap-strictness);
+  scroll-snap-type: x var(--tw-scroll-snap-strictness);
 }
 
 .snap-mandatory{
@@ -1610,8 +1599,20 @@ input:checked + .toggle-bg{
   list-style-type: none;
 }
 
+.list-decimal{
+  list-style-type: decimal;
+}
+
+.list-disc{
+  list-style-type: disc;
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1664,6 +1665,24 @@ input:checked + .toggle-bg{
 
 .gap-4{
   gap: 1rem;
+}
+
+.space-y-8 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2rem * var(--tw-space-y-reverse));
+}
+
+.space-y-7 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1.75rem * var(--tw-space-y-reverse));
+}
+
+.space-y-3 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 .space-y-6 > :not([hidden]) ~ :not([hidden]){
@@ -1765,6 +1784,10 @@ input:checked + .toggle-bg{
   white-space: nowrap;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -1781,12 +1804,18 @@ input:checked + .toggle-bg{
   border-radius: 9999px !important;
 }
 
-.rounded-full{
-  border-radius: 9999px;
-}
-
 .\!rounded-none{
   border-radius: 0px !important;
+}
+
+.rounded-t{
+  border-top-left-radius: 0.25rem;
+  border-top-right-radius: 0.25rem;
+}
+
+.rounded-b{
+  border-bottom-right-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
 }
 
 .rounded-r-none{
@@ -1802,16 +1831,6 @@ input:checked + .toggle-bg{
 .rounded-t-lg{
   border-top-left-radius: 0.5rem;
   border-top-right-radius: 0.5rem;
-}
-
-.rounded-t{
-  border-top-left-radius: 0.25rem;
-  border-top-right-radius: 0.25rem;
-}
-
-.rounded-b{
-  border-bottom-right-radius: 0.25rem;
-  border-bottom-left-radius: 0.25rem;
 }
 
 .rounded-l-lg{
@@ -1845,12 +1864,12 @@ input:checked + .toggle-bg{
   border-left-width: 4px;
 }
 
-.border-l-2{
-  border-left-width: 2px;
-}
-
 .border-b{
   border-bottom-width: 1px;
+}
+
+.border-l-2{
+  border-left-width: 2px;
 }
 
 .border-t-4{
@@ -1883,6 +1902,11 @@ input:checked + .toggle-bg{
 
 .border-dashed{
   border-style: dashed;
+}
+
+.border-gray-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .border-gray-200{
@@ -1949,9 +1973,9 @@ input:checked + .toggle-bg{
   border-color: rgb(28 100 242 / var(--tw-border-opacity));
 }
 
-.border-gray-400{
+.border-gray-700{
   --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+  border-color: rgb(55 65 81 / var(--tw-border-opacity));
 }
 
 .border-l-blue-800{
@@ -1968,6 +1992,11 @@ input:checked + .toggle-bg{
   border-left-color: transparent;
 }
 
+.bg-slate-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
 .bg-transparent{
   background-color: transparent;
 }
@@ -1975,6 +2004,26 @@ input:checked + .toggle-bg{
 .bg-blue-500{
   --tw-bg-opacity: 1;
   background-color: rgb(63 131 248 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-green-400{
+  --tw-bg-opacity: 1;
+  background-color: rgb(49 196 141 / var(--tw-bg-opacity));
+}
+
+.bg-indigo-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(81 69 205 / var(--tw-bg-opacity));
+}
+
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
 .bg-blue-700{
@@ -2036,11 +2085,6 @@ input:checked + .toggle-bg{
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
-.bg-green-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(49 196 141 / var(--tw-bg-opacity));
-}
-
 .bg-indigo-100{
   --tw-bg-opacity: 1;
   background-color: rgb(229 237 255 / var(--tw-bg-opacity));
@@ -2059,11 +2103,6 @@ input:checked + .toggle-bg{
 .bg-red-700{
   --tw-bg-opacity: 1;
   background-color: rgb(200 30 30 / var(--tw-bg-opacity));
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-purple-700{
@@ -2129,11 +2168,6 @@ input:checked + .toggle-bg{
   background-color: rgb(255 255 255 / 0.3);
 }
 
-.bg-gray-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
-}
-
 .bg-gray-600{
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
@@ -2162,11 +2196,6 @@ input:checked + .toggle-bg{
 .bg-purple-600{
   --tw-bg-opacity: 1;
   background-color: rgb(126 58 242 / var(--tw-bg-opacity));
-}
-
-.bg-indigo-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(81 69 205 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50{
@@ -2396,6 +2425,14 @@ input:checked + .toggle-bg{
   object-fit: cover;
 }
 
+.p-6{
+  padding: 1.5rem;
+}
+
+.p-5{
+  padding: 1.25rem;
+}
+
 .p-4{
   padding: 1rem;
 }
@@ -2416,20 +2453,12 @@ input:checked + .toggle-bg{
   padding: 0px;
 }
 
-.p-6{
-  padding: 1.5rem;
-}
-
 .p-2\.5{
   padding: 0.625rem;
 }
 
 .p-2{
   padding: 0.5rem;
-}
-
-.p-5{
-  padding: 1.25rem;
 }
 
 .\!p-2{
@@ -2460,14 +2489,24 @@ input:checked + .toggle-bg{
   padding-bottom: 1.25rem;
 }
 
-.px-3{
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .py-16{
@@ -2515,18 +2554,28 @@ input:checked + .toggle-bg{
   padding-bottom: 0.75rem;
 }
 
-.py-4{
-  padding-top: 1rem;
+.pt-20{
+  padding-top: 5rem;
+}
+
+.pt-12{
+  padding-top: 3rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.pb-4{
   padding-bottom: 1rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.pt-2{
+  padding-top: 0.5rem;
 }
 
-.pt-20{
-  padding-top: 5rem;
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .pl-0{
@@ -2565,24 +2614,8 @@ input:checked + .toggle-bg{
   padding-right: 1rem;
 }
 
-.pt-12{
-  padding-top: 3rem;
-}
-
-.pt-6{
-  padding-top: 1.5rem;
-}
-
-.pb-4{
-  padding-bottom: 1rem;
-}
-
-.pt-2{
-  padding-top: 0.5rem;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
+.pr-8{
+  padding-right: 2rem;
 }
 
 .text-left{
@@ -2612,11 +2645,6 @@ input:checked + .toggle-bg{
   line-height: 1.25rem;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
@@ -2625,6 +2653,11 @@ input:checked + .toggle-bg{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .font-light{
@@ -2651,14 +2684,6 @@ input:checked + .toggle-bg{
   text-transform: uppercase;
 }
 
-.leading-tight{
-  line-height: 1.25;
-}
-
-.leading-none{
-  line-height: 1;
-}
-
 .leading-3{
   line-height: .75rem;
 }
@@ -2671,14 +2696,42 @@ input:checked + .toggle-bg{
   line-height: 1rem;
 }
 
+.leading-tight{
+  line-height: 1.25;
+}
+
+.leading-none{
+  line-height: 1;
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-blue-500{
+  --tw-text-opacity: 1;
+  color: rgb(63 131 248 / var(--tw-text-opacity));
+}
+
+.text-gray-800{
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
 .text-gray-500{
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-gray-400{
@@ -2689,11 +2742,6 @@ input:checked + .toggle-bg{
 .text-gray-900{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-blue-500{
-  --tw-text-opacity: 1;
-  color: rgb(63 131 248 / var(--tw-text-opacity));
 }
 
 .text-red-500{
@@ -2739,11 +2787,6 @@ input:checked + .toggle-bg{
 .text-blue-800{
   --tw-text-opacity: 1;
   color: rgb(30 66 159 / var(--tw-text-opacity));
-}
-
-.text-gray-800{
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
 .text-red-800{
@@ -2821,22 +2864,17 @@ input:checked + .toggle-bg{
   color: rgb(225 239 254 / var(--tw-text-opacity));
 }
 
-.text-gray-600{
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
 .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
 }
 
-.placeholder-green-700::-webkit-input-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(4 108 78 / var(--tw-placeholder-opacity));
+.no-underline{
+  -webkit-text-decoration-line: none;
+          text-decoration-line: none;
 }
 
-.placeholder-green-700:-ms-input-placeholder{
+.placeholder-green-700::-webkit-input-placeholder{
   --tw-placeholder-opacity: 1;
   color: rgb(4 108 78 / var(--tw-placeholder-opacity));
 }
@@ -2847,11 +2885,6 @@ input:checked + .toggle-bg{
 }
 
 .placeholder-red-700::-webkit-input-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(200 30 30 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-red-700:-ms-input-placeholder{
   --tw-placeholder-opacity: 1;
   color: rgb(200 30 30 / var(--tw-placeholder-opacity));
 }
@@ -2869,15 +2902,21 @@ input:checked + .toggle-bg{
   opacity: 0;
 }
 
-.shadow-none{
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-lg{
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-none{
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -2893,9 +2932,9 @@ input:checked + .toggle-bg{
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-lg{
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.shadow-sm-light{
+  --tw-shadow: 0 2px 5px 0px rgba(255, 255, 255, 0.08);
+  --tw-shadow-colored: 0 2px 5px 0px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -3573,6 +3612,16 @@ input:checked + .toggle-bg{
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
 }
 
+.dark .dark\:bg-gray-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:bg-gray-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
 .dark .dark\:bg-gray-900{
   --tw-bg-opacity: 1;
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
@@ -3582,19 +3631,9 @@ input:checked + .toggle-bg{
   background-color: transparent !important;
 }
 
-.dark .dark\:bg-gray-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-
 .dark .dark\:bg-blue-200{
   --tw-bg-opacity: 1;
   background-color: rgb(195 221 253 / var(--tw-bg-opacity));
-}
-
-.dark .dark\:bg-gray-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-red-200{
@@ -3737,6 +3776,21 @@ input:checked + .toggle-bg{
   fill: #D1D5DB;
 }
 
+.dark .dark\:text-gray-100{
+  --tw-text-opacity: 1;
+  color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.dark .dark\:text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
 .dark .dark\:text-gray-400{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -3750,11 +3804,6 @@ input:checked + .toggle-bg{
 .dark .dark\:text-blue-600{
   --tw-text-opacity: 1;
   color: rgb(28 100 242 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-red-600{
@@ -3822,19 +3871,9 @@ input:checked + .toggle-bg{
   color: rgb(117 26 61 / var(--tw-text-opacity));
 }
 
-.dark .dark\:text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .dark .dark\:text-blue-500{
   --tw-text-opacity: 1;
   color: rgb(63 131 248 / var(--tw-text-opacity));
-}
-
-.dark .dark\:text-gray-100{
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
 }
 
 .dark .dark\:text-gray-600{
@@ -3868,11 +3907,6 @@ input:checked + .toggle-bg{
 }
 
 .dark .dark\:placeholder-gray-400::-webkit-input-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-placeholder-opacity));
-}
-
-.dark .dark\:placeholder-gray-400:-ms-input-placeholder{
   --tw-placeholder-opacity: 1;
   color: rgb(156 163 175 / var(--tw-placeholder-opacity));
 }
@@ -4235,10 +4269,6 @@ input:checked + .toggle-bg{
     width: 1.5rem;
   }
 
-  .sm\:w-4\/5{
-    width: 80%;
-  }
-
   .sm\:rounded-lg{
     border-radius: 0.5rem;
   }
@@ -4354,16 +4384,16 @@ input:checked + .toggle-bg{
     background-color: transparent;
   }
 
+  .md\:p-16{
+    padding: 4rem;
+  }
+
   .md\:p-6{
     padding: 1.5rem;
   }
 
   .md\:p-0{
     padding: 0px;
-  }
-
-  .md\:p-16{
-    padding: 4rem;
   }
 
   .md\:py-8{
@@ -4376,8 +4406,18 @@ input:checked + .toggle-bg{
     padding-right: 4rem;
   }
 
+  .md\:px-10{
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+
   .md\:pb-12{
     padding-bottom: 3rem;
+  }
+
+  .md\:text-base{
+    font-size: 1rem;
+    line-height: 1.5rem;
   }
 
   .md\:text-sm{
@@ -4416,21 +4456,5 @@ input:checked + .toggle-bg{
 @media (min-width: 1024px){
   .lg\:h-44{
     height: 11rem;
-  }
-
-  .lg\:w-3\/5{
-    width: 60%;
-  }
-}
-
-@media (min-width: 1280px){
-  .xl\:w-1\/2{
-    width: 50%;
-  }
-}
-
-@media (min-width: 1806px){
-  .\32xl\:w-1\/3{
-    width: 33.333333%;
   }
 }  
